# schedule_fe

./: .gitignore  README.md  dune-project  index.html  package-lock.json  package.json  schedule.opam  tailwind.config.js  vite.config.js
.github/workflows/: build-sample-project.yml
src/: App.re  dune
