opam-version: "2.0"
synopsis: "schedule"
description: "schedule"
maintainer: ["Adrian Parvin Ouano"]
authors: ["Adrian Parvin Ouano"]
license: "MIT"
homepage: "https://github.com/adrianparvino/schedule"
bug-reports: "https://github.com/adrianparvino/schedule/issues"
depends: [
  "ocaml"
  "reason" {>= "3.10.0"}
  "dune" {>= "3.9"}
  "melange" {>= "2.0.0"}
  "reason-react" {>= "0.13.0"}
  "reason-react-ppx"
  "melange-fetch" {>= "0.1.0"}
  "melange-json" {>= "2.0.0"}
  "opam-check-npm-deps" {with-test} # todo: use with-dev-setup once opam 2.2 is out
  "ocaml-lsp-server" {with-test} # todo: use with-dev-setup once opam 2.2 is out
  "dot-merlin-reader" {with-test} # todo: use with-dev-setup once opam 2.2 is out
  "odoc" {with-doc}
]
dev-repo: "git+https://github.com/your/project.git"
